--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
         <h1>Rat Tails for Sale!</h1>
         <p>Relics from the Great Hanoi Rat Massacre</p>
     </header>
-    
+
+    <!-- Clickable Box to About Section -->
+    <section id="learnMore">
+        <a href="#about">
+            <div class="infoBox">
+                <h2>Learn More About the Great Hanoi Rat Massacre</h2>
+                <p>Click here to read about the history behind these rat tails!</p>
+            </div>
+        </a>
+    </section>
+
+    <!-- About Section -->
     <section id="about">
         <h2>About the Great Hanoi Rat Massacre</h2>
         <p>In 1902, the colonial authorities in Hanoi attempted to exterminate rats to control the plague. This created an unintended economy of rat tails! Now, you can own a piece of history.</p>
@@ -41,7 +52,7 @@
     </section>
 
     <footer>
-        <p>© 2024 Bryson's Rat Tails. All Rights Reserved.</p>
+        <p>© 2024 Bman's Rat Tails. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
