--- a/index.html
+++ b/index.html
@@ -12,20 +12,14 @@
         <p>Relics from the Great Hanoi Rat Massacre</p>
     </header>
 
-    <!-- Clickable Box to About Section -->
+    <!-- Clickable Box to the new About page -->
     <section id="learnMore">
-        <a href="#about">
+        <a href="about.html">
             <div class="infoBox">
                 <h2>Learn More About the Great Hanoi Rat Massacre</h2>
                 <p>Click here to read about the history behind these rat tails!</p>
             </div>
         </a>
-    </section>
-
-    <!-- About Section -->
-    <section id="about">
-        <h2>About the Great Hanoi Rat Massacre</h2>
-        <p>In 1902, the colonial authorities in Hanoi attempted to exterminate rats to control the plague. This created an unintended economy of rat tails! Now, you can own a piece of history.</p>
     </section>
 
     <section id="products">
