--- a/about.html
+++ b/about.html
@@ -18,9 +18,12 @@
         <!-- Centered Image -->
         <img src="rat1.jpg" alt="Rat1">
 
-        <!-- Back to Shop link -->
-        <a class="back-link" href="index.html">Click here to go back to the previous shop page!</a>
     </div>
+
+    <!-- Back to Shop link -->
+    <section id="back-link">
+        <a class="back-link" href="index.html">Click here to go back to the previous shop page!</a>
+    </section>
 
     <footer>
         <p>© 2024 Bman's Rat Tails. All Rights Reserved.</p>
