Changed Name in Footer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <!-- Clickable Box to the new About page -->
-    <section id="learnMore">
+    <section id="back-link">
         <a href="about.html">
             <div class="infoBox">
                 <h2>Learn More About the Great Hanoi Rat Massacre</h2>
@@ -46,7 +46,7 @@
     </section>
 
     <footer>
-        <p>© 2024 Bman's Rat Tails. All Rights Reserved.</p>
+        <p>© 2024 Bryson's Rat Tails. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
