--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     </section>
 
     <footer>
-        <p>© 2024 Bman's Rat Tails. All Rights Reserved.</p>
+        <p>© 2024 Bryson's Rat Tails. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
