--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 
     <!-- Clickable Box to the new About page -->
     <section id="back-link">
-        <a href="about.html">
-            <div class="infoBox">
+        <a class="back-link" href="about.html">
                 <h2>Learn More About the Great Hanoi Rat Massacre</h2>
                 <p>Click here to read about the history behind these rat tails!</p>
-            </div>
         </a>
     </section>
 
