Changing Link Style
updated styles to change infoBox styling

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </header>
 
     <!-- Clickable Box to the new About page -->
-    <section id="back-link">
-        <a class="back-link" href="about.html">
-                <h2>Learn More About the Great Hanoi Rat Massacre</h2>
-                <p>Click here to read about the history behind these rat tails!</p>
+    <section id="infoBox">
+        <a class="infoBox" href="about.html">
+            <h2>Learn More About the Great Hanoi Rat Massacre</h2>
+            <p>Click here to read about the history behind these rat tails!</p>
         </a>
     </section>
 
