--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
     </header>
 
     <div class="content">
-        <p>In 1902, the colonial authorities in Hanoi attempted to exterminate rats to control the plague. This created an unintended economy of rat tails, as citizens were paid for every rat tail they turned in!</p>
-        <p>This led to one of the most bizarre historical events, where instead of reducing the rat population, it led to breeding more rats to collect more tails. Now, you can own a piece of history from this strange event.</p>
+        <p>Here now in 1902, the french colonial authorities in Hanoi attempted to exterminate rats to control the plague. This created an unintended economy of rat tails, as us citizens are being paid for every rat tail we turned in!</p>
+        <p>Instead of reducing the rat population, we are breeding more rats to collect more tails. Now, you can buy some of our discounted tails to sell to the authorities!</p>
 
         <!-- Centered Image -->
         <img src="rat1.jpg" alt="Rat1">
@@ -27,7 +27,7 @@
     </section>
 
     <footer>
-        <p>© 2024 Bryson's Rat Tails. All Rights Reserved.</p>
+        <p>© 1902 Bryson's Rat Tails. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
