Testing style changes

--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
     </section>
 
     <section id="products">
-        <h2>Our Collection</h2>
-        <div class="product">
-            <img src="rat_tail.jpg" alt="Rat Tail">
-            <h3>Authentic Hanoi Rat Tail</h3>
-            <p>Price: $50</p>
-            <button onclick="addToCart('Authentic Hanoi Rat Tail')">Add to Cart</button>
-        </div>
-        <div class="product">
-            <img src="gold_rat_tail.jpg" alt="Golden Rat Tail">
-            <h3>Golden Rat Tail</h3>
-            <p>Price: $100</p>
-            <button onclick="addToCart('Golden Rat Tail')">Add to Cart</button>
+        <div class="collection-container">
+            <h2>Our Collection</h2>
+            <div class="product">
+                <img src="rat_tail.jpg" alt="Rat Tail">
+                <h3>Authentic Hanoi Rat Tail</h3>
+                <p>Price: $50</p>
+                <button onclick="addToCart('Authentic Hanoi Rat Tail')">Add to Cart</button>
+            </div>
+            <div class="product">
+                <img src="gold_rat_tail.jpg" alt="Golden Rat Tail">
+                <h3>Golden Rat Tail</h3>
+                <p>Price: $100</p>
+                <button onclick="addToCart('Golden Rat Tail')">Add to Cart</button>
+            </div>
         </div>
     </section>
 
@@ -45,7 +47,7 @@
     </section>
 
     <footer>
-        <p>© 1902 Bryson's Rat Tails. All Rights Reserved.</p>
+        <p>© Bryson's Rat Tails. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
