--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     </header>
 
     <div class="content">
-        <p>Here now in 1902, the french colonial authorities in Hanoi attempted to exterminate rats to control the plague. This created an unintended economy of rat tails, as us citizens are being paid for every rat tail we turned in!</p>
+        <p>Here now in 1902, the french colonial authorities in Hanoi are attempting to exterminate rats to control the plague. This has created an unintended economy of rat tails, as us citizens are being paid for every rat tail we turn in!</p>
         <p>Instead of reducing the rat population, we are breeding more rats to collect more tails. Now, you can buy some of our discounted tails to sell to the authorities!</p>
 
         <!-- Centered Image -->
@@ -29,5 +29,6 @@
     <footer>
         <p>© 1902 Bryson's Rat Tails. All Rights Reserved.</p>
     </footer>
+
 </body>
 </html>
