Add Whitespace to bottom
Attempted to add whitespace. Plus fixed text error

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
 
     <footer>
-        <p>© Bryson's Rat Tails. All Rights Reserved.</p>
+        <p>© 1902 Bryson's Rat Tails. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
