--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
         <ul id="cartItems">
             <li>No items in the cart yet.</li>
         </ul>
+        <!-- Checkout Button -->
+        <button id="checkoutButton" onclick="location.href='out_of_stock.html'">Checkout</button>
     </section>
+    
 
     <footer>
         <p>© 2024 Bman's Rat Tails. All Rights Reserved.</p>
