added funny pic

--- a/out_of_stock.html
+++ b/out_of_stock.html
@@ -51,6 +51,8 @@
 
     <section>
         <p>Sorry about the inconvenience but we are out of stock in everything.</p>
+    
+        <img src="out_of_stock.png" alt="out_of_stock">
     </section>
 
     <footer>
