--- a/out_of_stock.html
+++ b/out_of_stock.html
@@ -55,6 +55,11 @@
         <img src="out_of_stock.png" alt="out_of_stock">
     </section>
 
+    <!-- Back to Shop link -->
+    <section id="back-link">
+        <a class="back-link" href="index.html">Click here to go back to the previous shop page!</a>
+    </section>
+
     <footer>
         <p>© 1902 Bryson's Rat Tails. All Rights Reserved.</p>
     </footer>
